Removed emoji alignment fix (Discord finally fixed it themselves).

--- a/src/source.css
+++ b/src/source.css
@@ -5135,7 +5135,6 @@ ul.bda-slist {
 }
 .emoji {
   position: relative !important;
-  margin: -0.1em 0.05em -0.4em 0.1em !important;
 }
 .emoji.jumboable {
   margin-bottom: 0 !important;
